--- a/index.html
+++ b/index.html
@@ -26,15 +26,304 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
         />
+        <link rel="stylesheet" href="css/style.css" />
         <title>Hello, world!</title>
     </head>
+
     <body>
-        <section class="container">
-            <h2>One plan, no hassle</h2>
+        <section class="container d-flex flex-column align-items-center">
+            <h2 class="fs-4 mt-5">One plan, no hassle</h2>
+            <h3 class="text-secondary fs-5 mb-5">
+                Easy pricing means no suprises.
+            </h3>
+            <div class="row d-flex flex-row align-items-center w-100 mb-5">
+                <div class="col-lg-6 shadow bg-white px-0">
+                    <div class="p-4 ps-5">
+                        <div
+                            class="badge rounded-pill bg-primary bg-opacity-25 text-primary"
+                        >
+                            Standard
+                        </div>
+
+                        <div class="mb-4">
+                            <span class="fs-4">$</span>
+                            <span class="fs-1">19</span>
+                            <span>/mo</span>
+                        </div>
+                        <ul class="ls-none p-0">
+                            <li class="mb-1">
+                                <i
+                                    class="far fa-check-circle me-1 check-circle-check"
+                                ></i
+                                >Up to 15 users
+                            </li>
+                            <li class="mb-1">
+                                <i
+                                    class="far fa-check-circle me-1 check-circle-check"
+                                ></i
+                                >Email and live chat support
+                            </li>
+                            <li class="mb-1">
+                                <i
+                                    class="far fa-check-circle me-1 check-circle-check"
+                                ></i
+                                >Style customizer
+                            </li>
+                            <li class="mb-1">
+                                <i
+                                    class="far fa-check-circle me-1 check-circle-check"
+                                ></i
+                                >Custom components
+                            </li>
+                            <li class="mb-1">
+                                <i
+                                    class="far fa-check-circle me-1 check-circle-check"
+                                ></i
+                                >Expanded utilities
+                            </li>
+                            <li class="mb-1">
+                                <i
+                                    class="far fa-check-circle me-1 check-circle-check"
+                                ></i
+                                >Third-party integration
+                            </li>
+                            <li class="mb-4">
+                                <i
+                                    class="far fa-check-circle me-1 check-circle-check"
+                                ></i
+                                >Layout options
+                            </li>
+                        </ul>
+                    </div>
+
+                    <a class="text-decoration-links" href="">
+                        <hr class="m-0 p-0" />
+                        <div
+                            class="py-3 px-5 d-flex align-items-center justify-content-between"
+                        >
+                            Get Started!
+                            <i class="fas fa-arrow-right"></i>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-6 customized-secction-color px-0">
+                    <div class="p-4">
+                        <div
+                            class="badge rounded-pill text-white-50 bg-dark bg-opacity-25 mt-4"
+                        >
+                            Customized
+                        </div>
+                        <p class="text-muted py-4">
+                            Need a customized plan? Contact us directly and we
+                            can work with you to craft a plan that fits your
+                            company's specific needs.
+                        </p>
+                    </div>
+                    <a class="text-decoration-links" href="">
+                        <div
+                            class="text-white-50 bg-dark bg-opacity-75 py-3 px-5 d-flex align-items-center justify-content-between"
+                        >
+                            Contact Sales
+                            <i class="fas fa-arrow-right"></i>
+                        </div>
+                    </a>
+                </div>
+            </div>
         </section>
-        <hr />
-        <section class="container">
-            <h2>Simple Pricing</h2>
+        <hr class="mt-5" />
+        <section class="container d-flex flex-column align-items-center mb-5">
+            <h2 class="fs-4 mt-5">Simple Pricing</h2>
+            <h3 class="text-secondary fs-5 mb-5">
+                Easy pricing means no suprises.
+            </h3>
+            <div class="row d-flex flex-row align-items-center w-100">
+                <div class="col-lg-4 shadow bg-white px-0 mb-lg-0">
+                    <div class="p-4 ps-5">
+                        <div class="d-flex flex-column align-items-center">
+                            <div
+                                class="badge rounded-pill bg-secondary bg-opacity-10 text-dark"
+                            >
+                                Free
+                            </div>
+                            <div class="mb-4">
+                                <span class="fs-4">$</span>
+                                <span class="fs-1">0</span>
+                                <span>/mo</span>
+                            </div>
+                        </div>
+
+                        <ul class="ls-none p-0">
+                            <li class="mb-1">
+                                <i
+                                    class="far fa-check-circle me-1 check-circle-check text-success"
+                                ></i
+                                >1 user
+                            </li>
+                            <li class="mb-1">
+                                <i
+                                    class="far fa-check-circle me-1 check-circle-check text-success"
+                                ></i
+                                >Community support
+                            </li>
+                            <li class="mb-1">
+                                <i
+                                    class="far fa-circle me-1 check-circle-check text-muted"
+                                ></i
+                                >Style customizer
+                            </li>
+                            <li class="mb-1">
+                                <i
+                                    class="far me-1 fa-circle me-1 check-circle-check text-muted"
+                                ></i
+                                >Custom components
+                            </li>
+                            <li class="mb-1">
+                                <i
+                                    class="far me-1 fa-circle me-1 check-circle-check text-muted"
+                                ></i
+                                >Expanded utilities
+                            </li>
+                            <li class="mb-1">
+                                <i
+                                    class="far me-1 fa-circle me-1 check-circle-check text-muted"
+                                ></i
+                                >Third-party integration
+                            </li>
+                            <li class="mb-4">
+                                <i
+                                    class="far me-1 fa-circle me-1 check-circle-check text-muted"
+                                ></i
+                                >Layout options
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div
+                    class="col-lg-4 shadow bg-white px-0 zindex-panel-central mb-lg-0 mb-5"
+                >
+                    <div class="p-5 ps-5">
+                        <div class="d-flex flex-column align-items-center">
+                            <div
+                                class="badge rounded-pill bg-primary bg-opacity-25 text-primary"
+                            >
+                                Standard
+                            </div>
+
+                            <div class="mb-4">
+                                <span class="fs-4">$</span>
+                                <span class="fs-1">19</span>
+                                <span>/mo</span>
+                            </div>
+                        </div>
+
+                        <ul class="ls-none p-0">
+                            <li class="mb-1">
+                                <i
+                                    class="far fa-check-circle me-1 check-circle-check text-success"
+                                ></i
+                                >Up to 15 users
+                            </li>
+                            <li class="mb-1">
+                                <i
+                                    class="far fa-check-circle me-1 check-circle-check text-success"
+                                ></i
+                                >Email and live chat support
+                            </li>
+                            <li class="mb-1">
+                                <i
+                                    class="far fa-check-circle me-1 check-circle-check text-success"
+                                ></i
+                                >Style customizer
+                            </li>
+                            <li class="mb-1">
+                                <i
+                                    class="far fa-check-circle me-1 check-circle-check text-success"
+                                ></i
+                                >Custom components
+                            </li>
+                            <li class="mb-1">
+                                <i
+                                    class="far me-1 fa-circle me-1 check-circle-check text-muted"
+                                ></i
+                                >Expanded utilities
+                            </li>
+                            <li class="mb-1">
+                                <i
+                                    class="far me-1 fa-circle me-1 check-circle-check text-muted"
+                                ></i
+                                >Third-party integration
+                            </li>
+                            <li class="mb-4">
+                                <i
+                                    class="far me-1 fa-circle me-1 check-circle-check text-muted"
+                                ></i
+                                >Layout options
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-4 shadow bg-white px-0">
+                    <div class="p-4 ps-5">
+                        <div class="d-flex flex-column align-items-center">
+                            <div class="badge rounded-pill premium-badge-color">
+                                Premium
+                            </div>
+
+                            <div class="mb-4">
+                                <span class="fs-4">$</span>
+                                <span class="fs-1">29</span>
+                                <span>/mo</span>
+                            </div>
+                        </div>
+
+                        <ul class="ls-none p-0">
+                            <li class="mb-1">
+                                <i
+                                    class="far fa-check-circle me-1 check-circle-check text-success"
+                                ></i
+                                >Up to 15 users
+                            </li>
+                            <li class="mb-1">
+                                <i
+                                    class="far fa-check-circle me-1 check-circle-check text-success"
+                                ></i
+                                >Email and live chat support
+                            </li>
+                            <li class="mb-1">
+                                <i
+                                    class="far fa-check-circle me-1 check-circle-check text-success"
+                                ></i
+                                >Style customizer
+                            </li>
+                            <li class="mb-1">
+                                <i
+                                    class="far fa-check-circle me-1 check-circle-check text-success"
+                                ></i
+                                >Custom components
+                            </li>
+                            <li class="mb-1">
+                                <i
+                                    class="far fa-check-circle me-1 check-circle-check text-success"
+                                ></i
+                                >Expanded utilities
+                            </li>
+                            <li class="mb-1">
+                                <i
+                                    class="far fa-check-circle me-1 check-circle-check text-success"
+                                ></i
+                                >Third-party integration
+                            </li>
+                            <li class="mb-4">
+                                <i
+                                    class="far fa-check-circle me-1 check-circle-check text-success"
+                                ></i
+                                >Layout options
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <a href="" class="btn btn-primary mt-5">Get Started</a>
         </section>
 
         <script
