--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <link rel="stylesheet" href="css/style.css" />
         <title>Hello, world!</title>
     </head>
-
     <body>
+        <!--MID SECCION-->
         <section class="container d-flex flex-column align-items-center">
             <h2 class="fs-4 mt-5">One plan, no hassle</h2>
             <h3 class="text-secondary fs-5 mb-5">
@@ -325,7 +325,8 @@
             </div>
             <a href="" class="btn btn-primary mt-5">Get Started</a>
         </section>
-
+        <hr class="mt-5" />
+        <!--FIN MID SECCION-->
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
