--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
         />
-        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="css/style-adrian.css" />
         <title>Hello, world!</title>
     </head>
     <body>
