--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <!-- link CSS -->
-        <link rel="stylesheet" href="css/style.css" />
-
         <!-- Bootstrap CSS -->
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -30,9 +27,13 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
         />
+        <!-- link CSS -->
+        <link rel="stylesheet" href="css/style-carlos.css" />
         <title>Hello, world!</title>
     </head>
     <body>
+        
+        <!--NAV POR CARLOS 1-->
         <nav id="navbar-default "
             class="navbar navbar-expand-lg navbar-light fixed-top py-4"
         >
@@ -648,6 +649,7 @@
                 </div>
             </div>
         </nav>
+        <!--HEADER POR CARLOS-->
         <header class="gradient">
             <div class="container section1 text-center">
                 <div class="row">
@@ -658,7 +660,7 @@
                 </div>
             </div>
         </header>
-
+        <!--Seccion despues del header-->
         <section class="section2 text-center container ">
             <div class="row section2title py-5">
             <h2 >Simple Pricing</h2>
@@ -775,6 +777,8 @@
                 </div>
             </div>
         </section>
+        <!--FINAL DEL NAV CARLOS-->
+
 
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
