--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             referrerpolicy="no-referrer"
         />
         <!-- link CSS -->
-        <link rel="stylesheet" href="css/style-carlos.css" />
+        <link rel="stylesheet" href="css/style.css" />
         <title>Hello, world!</title>
     </head>
     <body>
