--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+        <title>Pricing - SB UI Kit Pro</title>
+
+        <link rel="icon" href="img/favicon.png">
+
         <!-- Bootstrap CSS -->
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -29,7 +33,6 @@
         />
         <!-- link CSS -->
         <link rel="stylesheet" href="css/style.css" />
-        <title>Hello, world!</title>
     </head>
     <body>
         
@@ -650,7 +653,7 @@
             </div>
         </nav>
         <!--HEADER POR CARLOS-->
-        <header class="gradient">
+        <header class="gradient position-relative">
             <div class="container section1 text-center">
                 <div class="row">
                     <div class="col px-5">
@@ -1077,6 +1080,13 @@
         <hr class="mt-5" />
         <!--FIN MID SECCION-->
 
+        <!-- Comienza seccion de Andy -->
+
+        <section>
+            <footer>
+                <h1>Prueba para ver si ser rompe con Git</h1>
+            </footer>
+        </section>
 
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
