Update index.html & style.css (footer)
Agrego el footer completo al index.html, tambien sus respectivos estilos al final de style.css

--- a/index.html
+++ b/index.html
@@ -1081,10 +1081,148 @@
         <!--FIN MID SECCION-->
 
         <!-- Comienza seccion de Andy -->
+        <!--FOOTER ECHO POR ANDY :D-->
+        <!-- Seccion contacto -->
+        <section id="contact-section" class="container mt-5 pt-5">
+            <div class="row justify-content-between">
+                <div class="col-md-12 col-lg-6 " >
+                    <h4 >Ready to get started?</h4>
+                    <p class="text-muted" >Get in touch or create an account.</p>
+                </div>
+                <div class="col-md-12 col-lg-6 d-flex align-items-end " >
+                    <a href="#" class="btn btn-lg font-sm fw-bold btn-primary" >Contact Sales</a>
+                    <a href="#" class="btn btn-lg font-sm fw-bold btn-white shadow" >Create Account</a>
+                </div>
+            </div>
 
-        <section>
-            <footer>
-                <h1>Prueba para ver si ser rompe con Git</h1>
+            <!-- Dos cards en linea -->
+            <div id="footer-cards-row" class="row my-4 align-items-stretch">
+                <div class="col-md-12 col-lg-6 my-3">
+                    <a href="#" class="d-flex align-items-center h-100 py-5 px-4 border rounded-3 animate-up link-dark bg-white" >
+                        <div class="d-flex">
+                            <div class="flex-shrink-0">
+                                <svg class="svg-icon-card rounded-circle p-4 bg-blue text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-activity">
+                                    <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
+                                </svg>
+                            </div>
+                            <div class="flex-grow-1 ms-3">
+                                <h5 class="h5 color-blue" >Work smarter, not harder</h5>
+                                <p class="font-md text-muted" >Learn more about how our product can save you time and effort in the long run!</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-12 col-lg-6 my-3">
+                    <a href="#" class="d-flex align-items-center h-100 py-5 px-4 border rounded-3 animate-up link-dark bg-white" >
+                        <div class="d-flex">
+                            <div class="flex-shrink-0">
+                                <svg class="svg-icon-card rounded-circle p-4 bg-purple p-2 text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-code">
+                                    <polyline points="16 18 22 12 16 6"></polyline>
+                                    <polyline points="8 6 2 12 8 18"></polyline>
+                                </svg>
+                            </div>
+                            <div class="flex-grow-1 ms-3">
+                                <h5 class="h5 color-purple" >Built for developers</h5>
+                                <p class="font-md text-muted">Our components, utilities, and layouts are built with developers in mind.</p>    
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </section>
+
+        <svg class="wave" style="pointer-events: none" fill="currentColor" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1920 75">
+        <defs>
+            <style>
+                .a {
+                    fill: none;
+                }
+                .b {
+                    clip-path: url(#a);
+                }
+                .d {
+                    opacity: 0.5;
+                    isolation: isolate;
+                }
+            </style>
+        </defs>
+        <clipPath id="a"><rect class="a" width="1920" height="75"></rect></clipPath>
+        <g class="b"><path class="c" d="M1963,327H-105V65A2647.49,2647.49,0,0,1,431,19c217.7,3.5,239.6,30.8,470,36,297.3,6.7,367.5-36.2,642-28a2511.41,2511.41,0,0,1,420,48"></path></g>
+        <g class="b"><path class="d" d="M-127,404H1963V44c-140.1-28-343.3-46.7-566,22-75.5,23.3-118.5,45.9-162,64-48.6,20.2-404.7,128-784,0C355.2,97.7,341.6,78.3,235,50,86.6,10.6-41.8,6.9-127,10"></path></g>
+        <g class="b"><path class="d" d="M1979,462-155,446V106C251.8,20.2,576.6,15.9,805,30c167.4,10.3,322.3,32.9,680,56,207,13.4,378,20.3,494,24"></path></g>
+        <g class="b"><path class="d" d="M1998,484H-243V100c445.8,26.8,794.2-4.1,1035-39,141-20.4,231.1-40.1,378-45,349.6-11.6,636.7,73.8,828,150"></path></g>
+        </svg>
+    
+        <section id="footer-sec" class="pt-5">
+            <footer class="container py-4 p-0">
+                <div class="row py-5">
+                    <div class="col-sm-12 col-md-12 col-lg mb-5">
+                    <h5 class="fw-bold" >SB UI Kit Pro</h5>
+                    <p>Design made easy</p>
+                    <ul id="iconsList" class="p-0 m-0 d-flex ">
+                        <li>
+                        <a href="#">
+                            <i class="bi bi-instagram"></i>
+                        </a>
+                        </li>
+                        <li>
+                        <a href="#">
+                            <i class="bi bi-facebook"></i>
+                        </a>
+                        </li>
+                        <li>
+                        <a href="#">
+                            <i class="bi bi-github"></i>
+                        </a>
+                        </li>
+                        <li>
+                        <a href="#">
+                            <i class="bi bi-twitter"></i>
+                        </a>
+                        </li>
+                    </ul>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg mb-5">
+                    <h6 class="fw-bold" >Product</h6>
+                    <a href="#" class="d-block mb-2" >Landing</a>
+                    <a href="#" class="d-block mb-2" >Pages</a>
+                    <a href="#" class="d-block mb-2" >Sections</a>
+                    <a href="#" class="d-block mb-2" >Documentation</a>
+                    <a href="#" class="d-block mb-2" >Changelog</a>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg mb-5">
+                    <h6 class="fw-bold" >Technical</h6>
+                    <a href="#" class="d-block mb-2" >Documentation</a>
+                    <a href="#" class="d-block mb-2" >Changelog</a>
+                    <a href="#" class="d-block mb-2" >Theme Customizer</a>
+                    <a href="#" class="d-block mb-2" >UI Kit</a>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg mb-5">
+                    <h6 class="fw-bold" >Includes</h6>
+                    <a href="#" class="d-block mb-2" >Utilities</a>
+                    <a href="#" class="d-block mb-2" >Components</a>
+                    <a href="#" class="d-block mb-2" >Layouts</a>
+                    <a href="#" class="d-block mb-2" >Code Samples</a>
+                    <a href="#" class="d-block mb-2" >Products</a>
+                    <a href="#" class="d-block mb-2" >Affiliates</a>
+                    <a href="#" class="d-block mb-2" >Updates</a>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg mb-5">
+                    <h6 class="fw-bold" >Legal</h6>
+                    <a href="#" class="d-block mb-2" >Privacy Policy</a>
+                    <a href="#" class="d-block mb-2" >Terms and Conditions</a>
+                    <a href="#" class="d-block mb-2" >License</a>
+                    </div>
+                </div>
+                <hr />
+                <div class="d-flex justify-content-between py-5">
+                    <p>Copyright © Your Website 2021</p>
+                    <p class="d-flex">
+                    <a href="#">Privacy Policy</a>
+                    <span class="px-2">.</span>
+                    <a href="#">Terms & Conditions</a>
+                </div>
+                </div>
             </footer>
         </section>
 
