--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <body>
         
         <!--NAV POR CARLOS 1-->
-        <nav id="navbar-default "
+        <nav id="navbar-default"
             class="navbar navbar-expand-lg navbar-light fixed-top py-4"
         >
             <div class="container px-5">
@@ -58,13 +58,13 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#"
+                            <a class="nav-link text-white" aria-current="page" href="#"
                                 >Home</a
                             >
                         </li>
                         <li class="nav-item dropdown">
                             <a
-                                class="nav-link d-flex flex-row align-items-center"
+                                class="nav-link text-white"
                                 href="#"
                                 id="navbarDropdownMenuLink"
                                 role="button"
@@ -277,7 +277,7 @@
                         </li>
                         <li class="nav-item dropdown">
                             <a
-                                class="nav-link d-flex flex-row align-items-center"
+                                class="nav-link text-white"
                                 href="#"
                                 id="navbarDropdownMenuLink"
                                 role="button"
@@ -551,7 +551,7 @@
                         </li>
                         <li class="nav-item dropdown">
                             <a
-                                class="nav-link d-flex flex-row align-items-center"
+                                class="nav-link text-white"
                                 href="#"
                                 id="navbarDropdownMenuLink"
                                 role="button"
