--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         
         <!--NAV POR CARLOS 1-->
         <nav id="navbar-default"
-            class="navbar navbar-expand-lg navbar-light fixed-top py-4"
+            class="navbar navbar-expand-lg navbar-dark fixed-top py-4"
         >
             <div class="container px-5">
                 <a class="navbar-brand fs-5 fw-bold text-white" href="#"
@@ -655,12 +655,8 @@
         <!--HEADER POR CARLOS-->
         <header class="gradient position-relative">
             <div class="container section1 text-center">
-                <div class="row">
-                    <div class="col px-5">
-                        <h1 class="text-white">Pricing</h1>
-                        <h3>Our product, priced to fit your specific needs</h3>
-                    </div>
-                </div>
+                <h1 class="display-4 text-white fw-normal">Pricing</h1>
+                <p class="fs-5 text-gray opacity-75" >Our product, priced to fit your specific needs</p>
             </div>
         </header>
         <!--Seccion despues del header-->
@@ -1075,7 +1071,7 @@
                     </div>
                 </div>
             </div>
-            <a href="" class="btn btn-primary mt-5">Get Started</a>
+            <a href="" class="btn btn-primary font-bolder mt-5">Get Started</a>
         </section>
         <hr class="mt-5" />
         <!--FIN MID SECCION-->
@@ -1084,20 +1080,20 @@
         <!--FOOTER ECHO POR ANDY :D-->
         <!-- Seccion contacto -->
         <section id="contact-section" class="container mt-5 pt-5">
-            <div class="row justify-content-between">
-                <div class="col-md-12 col-lg-6 " >
+            <div class="d-flex flex-wrap justify-content-between">
+                <div class="" >
                     <h4 >Ready to get started?</h4>
                     <p class="text-muted" >Get in touch or create an account.</p>
                 </div>
-                <div class="col-md-12 col-lg-6 d-flex align-items-end " >
-                    <a href="#" class="btn btn-lg font-sm fw-bold btn-primary" >Contact Sales</a>
-                    <a href="#" class="btn btn-lg font-sm fw-bold btn-white shadow" >Create Account</a>
+                <div class="" >
+                    <a href="#" class="btn btn-lg font-sm font-bolder btn-primary" >Contact Sales</a>
+                    <a href="#" class="btn btn-lg font-sm font-bolder btn-white bg-white shadow" >Create Account</a>
                 </div>
             </div>
 
             <!-- Dos cards en linea -->
-            <div id="footer-cards-row" class="row my-4 align-items-stretch">
-                <div class="col-md-12 col-lg-6 my-3">
+            <div id="footer-cards-row" class="row align-items-stretch">
+                <div class="col-md-12 col-lg-6 mb-2">
                     <a href="#" class="d-flex align-items-center h-100 py-5 px-4 border rounded-3 animate-up link-dark bg-white" >
                         <div class="d-flex">
                             <div class="flex-shrink-0">
@@ -1112,7 +1108,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-md-12 col-lg-6 my-3">
+                <div class="col-md-12 col-lg-6 mb-2">
                     <a href="#" class="d-flex align-items-center h-100 py-5 px-4 border rounded-3 animate-up link-dark bg-white" >
                         <div class="d-flex">
                             <div class="flex-shrink-0">
